# gkd_vision_26

./: CMakeLists.txt  run_infantry.sh  run_sentry.sh
calibration/: README.md  record.cpp
configs/: gkdhero.yaml  gkdinfantry.yaml  gkdsentry.yaml
io/: gkdcontrol.cpp  gkdcontrol.hpp
io/gkdcontrol/: socket_interface.hpp
src/: gkdsentry.cpp  gkdsentry_debug.cpp
tasks/auto_aim/: tracker.hpp
tools/: recorder.cpp  recorder.hpp
